kubernetes/clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bankapp-service
  namespace: bank-app
spec:
  selector:
   app: bankapp-web
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
