kubernetes/stateful_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: bank-app
  labels:
    app: mysql
spec:
  ports:
    - port: 3306
      name: mysql
  clusterIP: None  # Headless service for StatefulSet
  selector:
    app: mysql
