kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bankapp-ingress
  namespace: bank-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/ssl-redirect: "false" # Force HTTPS
      #   cert-manager.io/cluster-issuer: letsencrypt-prod  # Use Let's Encrypt
spec:
  rules:
    - host: bankapp.local
      http: "3.251.67.117.nip.io"
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bankapp-service
                port:
                  number: 8080
